--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     },
     "homepage": "https://github.com/brian-yang/cs411-globalpoverty#readme",
     "dependencies": {
+        "apoc": "^2.1.6",
         "express": "^4.17.1",
+        "mysql": "^2.18.1",
         "next": "^9.3.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
