--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.17.1",
         "extend": "^3.0.2",
         "mysql": "^2.18.1",
+        "nan": "^2.14.0",
         "next": "^9.3.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
