--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": ":) Under construction",
     "main": "index.js",
     "scripts": {
-        "dev": "node server/server.js",
+        "dev": "nodemon server/server.js",
         "build": "next build",
         "start": "next start"
     },
@@ -27,6 +27,7 @@
         "mysql": "^2.18.1",
         "nan": "^2.14.0",
         "next": "^9.3.4",
+        "nodemon": "^2.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "safe-eval": "^0.4.1",
