--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "safe-eval": "^0.4.1",
+        "styled-components": "^4.4.0",
         "superagent": "^5.2.2"
+    },
+    "devDependencies": {
+        "babel-plugin-styled-components": "^1.10.7"
     }
 }
