--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "nodemon": "^2.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "recharts": "^1.8.5",
         "safe-eval": "^0.4.1",
         "styled-components": "^4.4.0",
         "superagent": "^5.2.2"
