--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": ":) Under construction",
     "main": "index.js",
     "scripts": {
-        "dev": "node server/server.js",
+        "dev": "nodemon server/server.js",
         "build": "next build",
         "start": "next start"
     },
